--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -10,8 +10,5 @@ front_matter_path: ''
 use_front_matter_path: false
 file_template: ":filename:"
 build:
-  install_dependencies_command: npm install
-  preview_docker_image: forestryio/node:12
-  mount_path: "/srv"
-  working_dir: "/srv"
-  instant_preview_command: npm run develop
+  install_dependencies_command: yarn install
+  instant_preview_command: yarn dev
