--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -4,6 +4,13 @@ auto_deploy: false
 admin_path: 
 webhook_url: 
 sections: 
+- type: directory
+  path: works
+  label: Works
+  create: documents
+  match: "**/*"
+  templates:
+  - work
 upload_dir: uploads
 public_path: "/uploads"
 front_matter_path: ''
